--- a/FM_MyStat.Web/Views/Homework/Create.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Create.cshtml
@@ -3,6 +3,81 @@
 @{
     Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
+<style>
+    .card-header {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
+
+    .btn-primary {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
+
+    .form__group {
+        position: relative;
+        padding: 15px 0 0;
+        margin-top: 10px;
+        width: 100%;
+    }
+
+    .form__field {
+        font-family: inherit;
+        width: 100%;
+        border: 0;
+        border-bottom: 2px solid #9b9b9b;
+        outline: 0;
+        font-size: 1.3rem;
+        color: black;
+        padding: 7px 0;
+        background: transparent;
+        transition: border-color 0.2s;
+    }
+
+        .form__field::placeholder {
+            color: transparent;
+        }
+
+        .form__field:placeholder-shown ~ .form__label {
+            font-size: 1.3rem;
+            cursor: text;
+            top: 20px;
+        }
+
+    .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: #9b9b9b;
+    }
+
+    .form__field:focus ~ .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        font-weight: 700;
+        padding-bottom: 6px;
+        font-weight: 700;
+        border-width: 3px;
+        border-image: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        border-image-slice: 1;
+    }
+
+    /* Reset input */
+    .form__field:required,
+    .form__field:invalid {
+        box-shadow: none;
+    }
+
+    }
+</style>
 
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -21,18 +96,6 @@
         <div class="container-fluid">
             <!-- SELECT2 EXAMPLE -->
             <div class="card card-default">
-                <div class="card-header">
-                    <h3 class="card-title">Create homework</h3>
-
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-tool" data-card-widget="remove">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </div>
-                </div>
                 <!-- /.card-header -->
                 <div class="card-body">
                     <div class="row">
@@ -49,22 +112,22 @@
                                 }
                                 <form method="post" asp-action="Create" enctype="multipart/form-data">
                                     <div class="card-body">
-                                        <div class="form-group">
-                                            <label for="title">Title</label>
-                                            <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
-                                            <input type="text" name="title" class="form-control" id="title" placeholder="Enter Title">
+                                        <div class="form__group field">
+                                            <input type="hidden" class="form__field" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
+                                            <input type="text" name="title" class="form__field" id="title" placeholder="Enter Title">
+                                            <label for="title" class="form__label">Title</label>
                                         </div>
-                                        <div class="form-group">
-                                            <label for="description">Description</label>
-                                            <input type="text" name="description" class="form-control" id="description" placeholder="Enter Description">
+                                        <div class="form__group field">
+                                            <input type="text" name="description" class="form__field" id="description" placeholder="Enter Description">
+                                            <label for="description" class="form__label">Description</label>
                                         </div>
 
-                                        <div class="form-group">
-                                            <label>File</label>
-                                            <input type="file" class="form-control-file" id="file" name="file" />
+                                        <div class="form__group field">
+                                            <input type="file" class="form__field-file" id="file" name="file" />
+                                            <label class="form__label">File</label>
                                         </div>
-                                        <div class="form-group">
-                                            <input type="hidden" name="LessonId" class="form-control" id="lessonid" placeholder="Enter Title" value="@ViewBag.LessonId">
+                                        <div class="form__group field">
+                                            <input type="hidden" name="LessonId" class="form__field" id="lessonid" placeholder="Enter Title" value="@ViewBag.LessonId">
                                         </div>
                                     </div>
 
