--- a/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
+++ b/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_StudentLayout.cshtml";
 }
-@using FM_MyStat.Core.DTOs.HomeworksDTO.Homework;
-@model List<HomeworkDTO>;
+@using FM_MyStat.Web.Models.ViewModels;
+@model HomeworkVM;
 <head>
     <style>
         .homework-card {
@@ -35,14 +35,13 @@
         }
     </style>
 </head>
-<div class="content-wrapper">
-    <!-- Content Header (Page header) -->
+< <div class="content-wrapper">
     <div class="container mt-4">
-        <h2>Your homeworks</h2>
+        <h2>Your Homeworks</h2>
         <hr>
         <div class="container">
             <div class="row">
-                @foreach (var homework in Model)
+                @foreach (var homework in Model.homeworkDTOs)
                 {
                     <div class="col-md-4">
                         <div class="card homework-card">
@@ -54,6 +53,7 @@
                                 <div>
                                     <!-- Your content goes here if needed -->
                                 </div>
+
                                 <div class="d-flex justify-content-around mt-3">
                                     <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
                                         <input type="hidden" name="HomeworkId" value="@homework.Id">
@@ -65,9 +65,8 @@
                                             <i class="fas fa-upload"></i> Upload
                                         </button>
                                     </form>
-                                    <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" 
-                                    class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
-                                    <i class="fas fa-download"></i>
+                                    <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
+                                        <i class="fas fa-download"></i>
                                     </a>
                                 </div>
                             </div>
@@ -76,52 +75,49 @@
                 }
             </div>
         </div>
-    </div>
-</div>
-<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="uploadModalLabel">Upload Homework</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- Your form for uploading the file goes here -->
-                <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label for="fileInput" class="font-weight-bold">Choose File</label>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" name="file" id="file" name="homeworkFile">
-                            <label class="custom-file-label" id="fileLabel" for="fileInput">Select file...</label>
+
+        <div class="container">
+            <div class="row">
+                @foreach (var homework in Model.homeworkDoneDTOs)
+                {
+                    <div class="col-md-4">
+                        <div class="card homework-card">
+                            <div class="card-header d-flex justify-content-between">
+                                <h5 class="card-title">@homework.Description</h5>
+                                <i class="info-icon fas fa-info-circle" data-toggle="popover" title="Info" data-content="@($"Description: {homework.Description}<br />Mark: {homework.Mark}")"></i>
+                            </div>
+                            <div class="card-body d-flex flex-column justify-content-between">
+                                <div>
+                                    <!-- Your content goes here if needed -->
+                                </div>
+
+                            </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+                }
             </div>
         </div>
+
     </div>
 </div>
 
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script>
     $(document).ready(function () {
         $('[data-toggle="popover"]').popover({
             trigger: 'hover',
             html: true
         });
     });
+
     $(document).ready(function () {
         $('[data-toggle="tooltip"]').tooltip();
     });
-    
+
     document.getElementById('file').addEventListener('change', function (event) {
         var fileName = event.target.value.split('\\').pop();
         document.getElementById('fileLabel').innerText = fileName;
     });
 </script>
-
