--- a/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
+++ b/FM_MyStat.Web/Views/Student/AllHomeworks.cshtml
@@ -35,48 +35,83 @@
         }
     </style>
 </head>
-< <div class="content-wrapper">
+<div class="content-wrapper">
     <div class="container mt-4">
-        <h2>Your Homeworks</h2>
-        <hr>
-        <div class="container">
-            <div class="row">
-                @foreach (var homework in Model.homeworkDTOs)
-                {
-                    <div class="col-md-4">
-                        <div class="card homework-card">
-                            <div class="card-header d-flex justify-content-between">
-                                <h5 class="card-title">@homework.Title</h5>
-                                <i class="info-icon fas fa-info-circle" data-toggle="popover" title="Info" data-content="@($"Description: {homework.Description}<br />Lesson: {homework.Lesson}")"></i>
-                            </div>
-                            <div class="card-body d-flex flex-column justify-content-between">
-                                <div>
-                                    <!-- Your content goes here if needed -->
+        @if (Model.homeworkDTOs.Any())
+        {
+            <h2>Your Homeworks</h2>
+            <hr>
+            <div class="container">
+                <div class="row">
+                    @foreach (var homework in Model.homeworkDTOs)
+                    {
+                        <div class="col-md-4">
+                            <div class="card homework-card">
+                                <div class="card-header d-flex justify-content-between">
+                                    <h5 class="card-title">@homework.Title</h5>
+                                    <i class="info-icon fas fa-info-circle" data-toggle="popover" title="Info" data-content="@($"Description: {homework.Description}<br />Lesson: {homework.Lesson}")"></i>
                                 </div>
+                                <div class="card-body d-flex flex-column justify-content-between">
+                                    <div>
+                                        <!-- Your content goes here if needed -->
+                                    </div>
 
-                                <div class="d-flex justify-content-around mt-3">
-                                    <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
-                                        <input type="hidden" name="HomeworkId" value="@homework.Id">
-                                        <div class="custom-file">
-                                            <input type="file" class="custom-file-input" name="file" id="file" name="homeworkFile">
-                                            <label class="custom-file-label" id="fileLabel" for="fileInput">Select file...</label>
-                                        </div>
-                                        <button type="submit" class="btn btn-success upload-btn flex-grow-1" style="height:70px">
-                                            <i class="fas fa-upload"></i> Upload
-                                        </button>
-                                    </form>
-                                    <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
-                                        <i class="fas fa-download"></i>
+                                    <div class="d-flex justify-content-around mt-3">
+                                        <form method="post" asp-controller="Student" asp-action="SubmitHomework" enctype="multipart/form-data">
+                                            <input type="hidden" name="HomeworkId" value="@homework.Id">
+                                            <div class="custom-file">
+                                                <input type="file" class="custom-file-input" name="file" id="file" name="homeworkFile">
+                                                <label class="custom-file-label" id="fileLabel" for="fileInput">Select file...</label>
+                                            </div>
+                                            <button type="submit" class="btn btn-success upload-btn flex-grow-1" style="height:70px">
+                                                <i class="fas fa-upload"></i> Upload
+                                            </button>
+                                        </form>
+                                        <a asp-controller="Homework" asp-action="Download" asp-route-id="@homework.Id" class="btn btn-primary download-btn ml-2 flex-grow-1" style="height:70px" data-toggle="tooltip" data-placement="bottom" title="Download">
+                                            <i class="fas fa-download"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+    </div>
+
+        <div class="container mt-4">
+            @if (Model.homeworkDoneDTOsNotMark.Any())
+            {
+                <h2>On Inspection:</h2>
+                <hr>
+                <div class="row">
+                    @foreach (var homework in Model.homeworkDoneDTOsNotMark)
+                    {
+                        <div class="col-md-4">
+                            <div class="card homework-card mb-4">
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h5 class="card-title">@homework.Description</h5>
+                                    <i class="info-icon fas fa-info-circle" data-toggle="popover" title="Info" data-content="@($"Description: {homework.Description}<br />Mark: {homework.Mark}")"></i>
+                                </div>
+                                <div class="card-body d-flex flex-column justify-content-between">
+                                    <a asp-controller="HomeworkDone" asp-action="DeleteHomework" asp-route-id="@homework.Id" class="btn btn-danger mt-2" data-toggle="tooltip" data-placement="bottom" title="Delete">
+                                        <i class="fas fa-trash"></i> Delete
                                     </a>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                }
-            </div>
+                    }
+                </div>
+            }
         </div>
 
-        <div class="container">
+
+    <div class="container mt-4">
+        @if (Model.homeworkDoneDTOs.Any())
+        {
+            <h2>Checked: </h2>
+            <hr>
             <div class="row">
                 @foreach (var homework in Model.homeworkDoneDTOs)
                 {
@@ -90,14 +125,13 @@
                                 <div>
                                     <!-- Your content goes here if needed -->
                                 </div>
-
                             </div>
                         </div>
                     </div>
                 }
             </div>
-        </div>
-
+        }
+    </div>
     </div>
 </div>
 
